fixed contacts page overflow issue

--- a/src/styles/page/contacts.module.css
+++ b/src/styles/page/contacts.module.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   height: 100%;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 .contacts__page > main {
 }
